# yas

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  MANAGER_API.md  README.md  README_EN.md  diff_snapshot.py
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: rust.yml
application/: Cargo.toml  build.rs
application/src/gui/: capture_tab.rs  credits.rs  log_bridge.rs  log_panel.rs  manager_tab.rs  mod.rs  privilege.rs  scanner_tab.rs  state.rs  update_banner.rs  widgets.rs  worker.rs
assets/: gen_icon.py
docs/: CONTEXT.md  HDR_CALIBRATION.md  MANAGER_API.md  MANAGER_IMPLEMENTATION_GUIDE.md  SOLVER_ALGORITHM.md
docs/superpowers/plans/: 2026-03-30-scanner-tests.md
genshin/: Cargo.toml
genshin/log/: manage_12-19-29_087.json  manage_12-19-46_516.json  manage_12-19-46_819.json  manage_12-19-47_016.json
genshin/src/: cache_meta.rs  cli.rs  lib.rs  server.rs  updater.rs
genshin/src/capture/: data_cache.rs  data_types.rs  monitor.rs  player_data.rs
genshin/src/manager/: equip_manager.rs  lock_manager.rs  matching.rs  models.rs  orchestrator.rs  ui_actions.rs
genshin/src/scanner/artifact/: config.rs  scanner.rs
genshin/src/scanner/character/: config.rs  scanner.rs
genshin/src/scanner/common/: annotator.rs  backpack_scanner.rs  constants.rs  debug_dump.rs  equip_parser.rs  fuzzy_match.rs  game_controller.rs  grid_icon_detector.rs  grid_voter.rs  mappings.rs  mod.rs  models.rs  ocr_factory.rs  ocr_pool.rs  pixel_profile.rs  pixel_utils.rs  progress.rs  roll_solver.rs  scan_runner.rs  scan_worker.rs  test_utils.rs
genshin/src/scanner/weapon/: config.rs  scanner.rs
scripts/: analyze_dark_square.py  analyze_grid_brightness.py  analyze_grid_icons.py  analyze_grid_lock_precise.py  analyze_grid_lock_region.py  analyze_icon_crops.py  analyze_margins.py  analyze_margins_v2.py  analyze_precise_position.py  analyze_retry_crops.py  analyze_scroll_offsets.py  analyze_selection_bias.py  build_grid_gt.py  crop_test.py  debug_card_edges.py  detect_card_edges.py  fit_grid_params.py  grid_fit_clean.json  grid_fit_results.json  grid_ground_truth.json  lock_by_page.py  lock_diff_deep.py  measure_grid_error.py  measure_icon_slots.py  refine_grid_center.py  refit_grid_clean.py  robust_grid_detect.py  star_grid_calibrate.py  test_area_detection.py  test_fft_margin.py  test_fft_sharpness.py  visualize_grid_icons.py
tools/: analyze_ambiguity.py  analyze_rounding.py  artifact_stat.json  diff_report.py  find_rounding_edges.py  validate_grid_detection.py
yas/: Cargo.toml
yas-application/: Cargo.toml
yas-genshin/: Cargo.toml
yas-genshin/src/application/: good_scanner.rs
yas-genshin/window_info/: windows2560x1440.json
yas-wutheringwaves/src/echo/: echo_name.rs
yas/src/: lang.rs  lib.rs
yas/src/capture/: mod.rs  stream_capturer.rs  wgc_capturer.rs
yas/src/export/: exporter.rs
yas/src/game_info/: game_info.rs  mod.rs  resolution_family.rs
yas/src/ocr/: mod.rs
yas/src/positioning/: pos.rs  size.rs
yas/src/profiler/: profiler.rs
(+27 files in other folders)
